# EHR_Local

./: .gitignore  AGENTS.md  CLAUDE.md  ConsultaMed_SPEC_COMPLETO.md  ConsultaMed_Schema_Supabase.sql  GEMINI.md  README.md  TODO.md  docker-compose.yml  render-frontend.yaml  render.yaml  start.bat
backend/: .env.example  .env.local.example  .env.supabase.example  pyproject.toml  render_build.sh  requirements.txt
backend/app/: __init__.py  __version__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  encounters.py  exceptions.py  patients.py  prescriptions.py  router.py  templates.py
backend/app/fhir/: __init__.py  base_mapping.py  clinical_mapping.py  etl.py
backend/app/models/: __init__.py  allergy.py  condition.py  encounter.py  medication_request.py  patient.py  practitioner.py  template.py
backend/app/schemas/: __init__.py  condition.py  encounter.py  medication.py  patient.py
backend/app/services/: __init__.py  base.py  patient_service.py  pdf_service.py
backend/app/templates/: prescription.html
backend/app/validators/: __init__.py  clinical.py  dni.py
backend/scripts/: export-openapi.py  load_hapi_clinical_subset.py
backend/scripts/migrations/: README.md  import_patients.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth_security.py  test_dni_validator.py  test_encounter_contract.py  test_pydantic_v2_migration.py
backend/tests/contracts/: test_encounter_contract.py  test_patient_contract.py
backend/tests/integration/: README.md  test_hapi_sidecar_deployment.py  test_runtime_db_auth_flow.py
(+211 files in other folders)
