[project]
name = "consultamed-backend"
version = "1.0.0"
description = "ConsultaMed MVP - FastAPI Backend"
authors = [
    {name = "Jaime A. Pineda Moreno", email = "jaime@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "alembic"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--strict-markers -ra"
norecursedirs = [".venv", ".venv2", ".git", "__pycache__", "alembic", "node_modules", ".env*"]
markers = [
    "unit: Fast unit tests for pure logic and model/schema behavior",
    "contract: API schema/contract tests between backend and frontend",
    "integration: End-to-end backend flow tests with external dependencies",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/__pycache__/*", "app/templates/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
fail_under = 60
show_missing = true
